Start2: Try to create own JdbcTemplate

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <servlet>
         <servlet-name>fineServlet</servlet-name>
-        <servlet-class>oleg.larionov.FineServlet</servlet-class>
+        <servlet-class>oleg.larionov.IndexServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
