--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
                     <url>jdbc:h2:./db/FinesBase</url>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
         </plugins>
 
     </build>
