--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 
     <servlet-mapping>
         <servlet-name>fineServlet</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <url-pattern>/rightIndex</url-pattern>
     </servlet-mapping>
 
 </web-app>
